--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+	<title>
+		Page Title Here
+	</title>
+    	<!--[if lt IE 9 ]><script src="http://html5shim.googlecode.com/svn/trunk/html.js">
+   	</script><![end if]-->
+    </head>
+    <body>
+    <header>
+	<h1>Hellow World!</h1>
+	<nav>
+	   <ul>NAVIGATION
+	      <li>LINK 1</li>
+        <li>LINK 2</li>
+        <li>LINK 3</li>
+	   </ul>
+	</nav>
+    </header>	
+	<main>
+  MAIN
+	<article>
+    ARTICLE
+	</article>
+
+	<section>
+    SECTION
+	</section>
+
+	</main>
+
+	<aside>
+    ASIDE
+	</aside>
+    </body>
+    <footer>
+      FOOTER
+    </footer>
+</html>
