--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,7 +10,7 @@
     </head>
     <body>
     <header>
-	<h1>Hellow World!</h1>
+	<h1>Hello World!</h1>
 	<nav>
 	   <ul>NAVIGATION
 	      <li>LINK 1</li>
