--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 	<title>
-		Page Title Here
+		Melissa Gibson Test Site
 	</title>
     	<!--[if lt IE 9 ]><script src="http://html5shim.googlecode.com/svn/trunk/html.js">
    	</script><![end if]-->
@@ -11,11 +11,11 @@
     <body>
     <header>
 	<h1>Hello World!</h1>
-	<nav>
-	   <ul>NAVIGATION
+	<nav>NAVIGATION
+	   <ul>
 	      <li>LINK 1</li>
-        <li>LINK 2</li>
-        <li>LINK 3</li>
+		<li>LINK 2</li>
+	        <li>LINK 3</li>
 	   </ul>
 	</nav>
     </header>	
